--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //Implement Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    //Implement GSON Converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    //Implement GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 }
