Añadimos nuevas librerías

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     //Implement GSON
     implementation 'com.google.code.gson:gson:2.8.6'
+    //Show circle images
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //To use images more easily
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
