--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.archLifecycleVersion"
 
+    //Dexter for manage permission
+    implementation 'com.karumi:dexter:6.1.2'
+
 
 }
